completed initial setting

--- a/_posts/2020-01-21-nhn-입문교육-회고.md
+++ b/_posts/2020-01-21-nhn-입문교육-회고.md
@@ -4,7 +4,7 @@ title: nhn 입문교육 회고                             # Title of the page
 hide_title: false                                  # Hide the title when displaying the post, but shown in lists of poststhumbnail: "assets/img/thumbnails/sample-th.png"  # Add 
 color: brown                             # Add the specified color as feature image, and change link colors in post
 author: "Mun Soo Kim"
-tags: [test]
+tags: [회고]
 ---
 
 ### 설치
