--- a/_posts/2020-03-09-객체지향-정리.md
+++ b/_posts/2020-03-09-객체지향-정리.md
@@ -7,7 +7,7 @@ author: "Mun Soo Kim"
 tags: [기술]
 ---
 
-이번 글에서는 최범균님이 집필하신 <개발자가 반드시 정복해야 할 객체 지향과 디자인 패턴>이라는 책의 객체 지향 파트에 대해서 정리해보려고 합니다.
+이번 글에서는 최범균님이 집필하신 [개발자가 반드시 정복해야 할 객체 지향과 디자인 패턴]이라는 책의 객체 지향 파트에 대해서 정리해보려고 합니다.
 
 ### 객체 지향
 
