edit post(OAuth2에 대하여)

--- a/_posts/2020-03-09-OAuth2에-대하여.md
+++ b/_posts/2020-03-09-OAuth2에-대하여.md
@@ -21,11 +21,15 @@ tags: [기술]
 
 3. 서드파티 앱은 결국 자신이 의존하고 있는 서비스들의 리소스에 광범위하게 접근이 가능해집니다.
 
+4. 유저가 비밀번호를 바꾸면 그 유저의 리소스에 의존하는 애플리케이션의 정상 동작을 보장할 수 없습니다.
+
+5. 서드파티 앱의 리소스 접근에 대한 권한을 폐기하기 위해서는 비밀번호를 바꾸는 방법밖에 없습니다.
+
 ### OAuth2의 인증 방식
 
 ---
 
-OAuth2는 앞에서 살펴본 기존 인증 방식의 문제를 해결하기 위해서 나온 대안으로 http 프로토콜 레이어에서 사용자 credentials가 아닌 토큰을 통해서 인증을 처리합니다.
+OAuth2는 앞에서 살펴본 기존 인증 방식의 문제를 해결하기 위해서 나온 대안으로 http 프로토콜 레이어에서 사용자 credentials가 아닌 토큰을 통해서 인증을 처리합니다. 이 방식을 통해서 안전한 방법으로 제한된 리소스에만 접근할 수 있게 할 수 있고, 권한 삭제와 같은 권한 관리가 편리해집니다.
 
 OAuth2 인증 과정에는 4개의 주체들이 상호작용하게 됩니다. 4개의 주체들에 대해서 먼저 살펴보겠습니다.
 
