add a post(실용주의 프로그래머 6장)

--- a/_posts/2021-12-08-실용주의-프로그래머-5장.md
+++ b/_posts/2021-12-08-실용주의-프로그래머-5장.md
@@ -48,3 +48,20 @@ tags: [기술]
 
 3. 동시성을 고려한 설계
    책은 자바의 스레드를 예로 들면서 동시성 제어를 위해 고려해야할 것들을 강조합니다. 가장 대표적으로 static한 변수들을 동시 접근으로부터 보호하는 것이 있는데요. 더 중요한 건 정적 변수가 정말 필요한지를 자문하는 것입니다. 다음은 여러 스레드의 손을 타는 전역 변수의 상태가 손을 탈 가능성이 있는 모든 시간대에 언제나 유효한 상태에 있도록 하는 것이 중요합니다.
+
+### 29장. 단지 뷰일 뿐이야
+
+적절히 책임을 잘 분리해서 모듈들을 만드는 것은 매우 중요합니다. 그런데 이렇게 만들고나서 각 모듈들이 소통하게 하려면 어떻게 해야할까요. 이벤트를 사용하면 됩니다. 이벤트는 어떤 객체의 상태 변화가 생기면 그 변화에 관심이 있는 다른 객체들에게 알리는 것입니다. 이벤트를 구현할 수 있는 대표적인 방법이 출판/구독인데요. 출판자는 이벤트를 발신하는 역할을 구독자는 이벤트를 수신하는 역할을 합니다. 구독자가 관심을 가지는 이벤트에 구독을 하면 출판자는 구독자 목록을 저장하고 해당 이벤트가 발생하면 목록에 있는 구독자에게 이벤트가 발생했다고 알리게 됩니다. 이 둘 간의 관계는 여러 형태를 가지는데, 직접 통신을 하는 'p2p'방식부터 중간에서 중계를 하는 객체를 두는 '소프트웨어 버스 방식' 등 다양합니다.
+이런 출판/구독 메커니즘은 MVC 패턴에서 뷰와 컨트롤러에서 모델을 분리해내기 위해서 사용할 수 있습니다. 모델은 출판자, 뷰는 구독자가 됩니다. 모델에서 어떤 데이터의 변화라는 이벤트가 생기면 뷰는 그 사실을 전달받아 갱신하는 것입니다.
+하지만 여전히 구독자와 출판자 사이에는 서로에 대한 의존성이 존재합니다. 가령 자바에서 출판자에게 인터페이스를 전달하더라도 콜백을 위해 어떤 루틴을 호출해야할지에 대한 지식을 가지고 있어야 합니다. 다음 장에서 결합도를 더 많이 낮추는 방법을 보겠습니다.
+
+### 30장. 칠판
+
+형사들이 수사를 할 때 칠판을 어떻게 활용하는지 살펴보면 다른 모듈들 간의 결합도를 낮추는 실마리를 찾을 수 있습니다. 형사들은 칠판을 다음과 같이 활용합니다.
+
+- 어떤 형사도 다른 형사들의 존재를 알 필요가 없다. 그저 칠판에 업데이트된 새로운 정보만 얻고 자신이 발견한 것을 추가한다.
+- 형사들은 저마다 속한 환경이 다르고 받은 훈련의 종류가 다르고, 교육 수준도 다르며, 관할 구역이 다를 수도 있다. 단지 그들의 공통점은 사건 해결 하나다.
+- 수사 과정에서 여러 형사들이 들어오고 나갈 수 있고, 임무의 교대 시간도 다 다를 수 있다.
+- 칠판에 어떤 정보를 올려야 하는지에 대한 제한은 없다. 사진, 증언, 물리적 증거 등 모든 것이 가능하다.
+
+위의 내용을 프로그래밍으로 적용해본다면, 형사들은 모듈들이 되고 칠판은 각 모듈들이 비동기적으로 데이터를 주고받을 수 있는 공간을 의미합니다. 이제 칠판에 데이터를 주고 받는 단 하나의 인터페이스만 정한다면 이벤트를 보내는 쪽과 받는 쪽의 결합은 완전히 끊어낼 수 있습니다. 이 내용을 보면서 메세징 큐가 떠올랐는데요. 카프카나, rabbit MQ를 이용하면 이런 메세징 큐에 데이터를 밀어넣고, 소비하기 위한 인터페이스를 하나로 통일할 수 있게 되어서 서로 다른 모듈들 간에 데이터 교환을 위한 제각각 다른 인터페이스를 구현하면서 생기는 의존성을 끊어낼 수 있습니다.
