--- a/_posts/2021-12-22-실용주의-프로그래머-8장.md
+++ b/_posts/2021-12-22-실용주의-프로그래머-8장.md
@@ -35,3 +35,24 @@ tags: [기술]
 
 수작업은 일관성과 반복 가능성을 보장하지 않습니다. 그렇기 때문에 항상 운에 의존하게 됩니다. 하지만 자동화를 하게 되면 실행할 때마다 일관된 과정을 통한 결과가 보장되기 때문에 자동화는 개발부터 제품 전반의 안정화를 위해서 가능한 곳에는 모두 적용되어야 합니다.
 자동화를 지원해주는 아주 다양한 도구들이 존재합니다. cron을 통해 어떤 작업이 정해진 시간에 주기적으로 수행되도록 할 수 있고, makefile로 프로젝트 컴파일을 할 수도 있습니다. 이런 도구들을 이용해서 빌드나 테스트 같은 것들도 자동화할 수 있도록 구성합시다!
+
+### 43장. 가차없는 테스트
+
+테스트 코드는 일찍 테스트하고, 자주 테스트해야 합니다. 가급적, 코드를 작성하자마자 테스트 코드를 해야 합니다. 버그는 빨리 발견하면 발견할수록 고치는 비용이 적어짐을 명심하고, 테스트 코드를 작성하고 모든 테스트가 통과했을 때 비로소 코딩이 끝났다고 생각하면서 코드를 작성합시다. 그리고 가능하다면 자동화해서 주기적으로 테스트 코드가 실행되도록 합시다.
+그럼 무엇을 테스트해야 할까요? 테스트를 할 때는 크게 단위 테스트, 통합 테스트, 유효성 평가와 검증, 녹록치 않은 현실 속 한정된 자원에서의 동작 테스트, 성능 테스트(스트레스 테스트), 사용 편의성 테스트 등을 해야 합니다.
+무엇을 테스트할지 알았다면, 어떻게 테스트할지도 알아야 합니다. 코드의 수정이 일어난 후에도 전체 기능이 수정 이전과 같이 동작하는지를 테스트해야 합니다. 이를 회귀 테스트라고 합니다. 그리고 실세계의 데이터, 통계적 조건 하에 인공적으로 생성된 합성 데이터와 같은 테스트 데이터를 많이 확보하고 이 데이터를 기반으로 테스트해야 합니다. 두 종료의 데이터가 갖는 다른 특징들이 다른 종류의 버그를 찾아줄 것이기 때문에 둘 다 사용해야 합니다.
+
+### 44장. 결국은 모두 글쓰기
+
+개발자들은 일반적으로 문서화보다는 코드를 작성하는 것을 더 좋아하는 것 같습니다. 하지만 실용주의 프로그래머들은 문서화도 개발 프로세스의 일부로 포용합니다. 문서를 코드에 녹여낼 수 있다면 문서 작성은 한결 더 쉬운 작업이 됩니다. 코드와 문서를 결합시키는 유틸리티는 많습니다. 자바의 경우 JavaDoc이 대표적입니다.
+문서의 종류로는 소스 코드, 주석, 설계와 테스트 문서와 같은 내부 문서와 사용자 메뉴얼 같이 외부로 출간되는 모든 것이 포함된 외부 문서가 있습니다. 어떤 문서이든 문서는 코드의 거울이라고 생각하고 작성을 게을리하지 맙시다. 특히 주석을 작성할 때는 그 코드의 동작에 대해 작성하는 경우가 많은데 그 내용은 이미 코드 자체에서 파악이 가능한 내용이기 때문에 DRY 원칙 위배입니다. 주석에는 왜 이런 코드가 작성되었는지, 왜 이런 구조로 잡았는지와 같은 목적에 대한 설명이 들어가야 합니다.
+
+### 45장. 위대한 유산
+
+위대한 소프트웨어는 명세를 올바르게 구현하는 것을 넘어서 사용자들의 기대를 충족시켜야 합니다. 아무리 설계가 훌륭하고, 효율적이고, 요구사항을 잘 충족하더라도 그것이 사용자에게 매력적이지 않고 기대를 충족하지 않는다면 그 소프트웨어는 실패작으로 간주됩니다.
+사용자들의 기대를 충족시키려면 사용자들과 기대에 대해서 상호 소통해야 합니다. 즉, 그들이 기대하는 것이 무엇인지에 집중하면서 사용자들에게 우리가 어떤 결과물을 전달하게 될 것인지를 끊임없이 설명해서, 그들이 무엇을 기대해야 할지에 대해서 제어를 하는 것이 중요합니다. 이런 과정은 앞에서 살펴본 예광탄이나 프로토타입 등을 이용해서 수월하게 진행할 수 있을 것입니다. 사용자들에게 미리 대략의 결과물을 보여줄 수 있기 때문입니다.
+그리고 가능하다면 사용자들이 요구하지 않은 추가 기능을 구현해서 그들을 놀라게 합시다. 물론 어디까지나 기본에 충실할 때의 이야기 입니다.
+
+### 46장. 오만과 편견
+
+실용주의 프로그래머는 자신의 결과물에 자부심을 가집니다. 그렇기 때문에 책임을 회피하지 않습니다. 하지만 이런 자부심이 때로는 오만으로 이어질 수도 있습니다. 각자 자신의 코드에 대한 자부심이 지나쳐 서로 협력하지 못하고 깎아내리고 편견을 가지게 될 수 있습니다. 이는 바람직하지 않습니다. 항상 다른 사람들의 코드를 존중하고 상호 존중을 지킵시다.
